Ticket #120 - Fixed wrong width in invitation Emails

--- a/assets/src/sass/access-controls-selected-members.scss
+++ b/assets/src/sass/access-controls-selected-members.scss
@@ -36,7 +36,7 @@
 	#torro-invite-email,
 	#torro-reinvite-email{
 		display:none;
-		margin: 10px 0 10px 150px;
+		margin: 10px 0 10px 200px;
 	}
 
 	#torro-invite-text,
